--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
 dj-database-url==0.4.2
 Django==1.11
+django-bootstrap3==8.2.3
 freeze==1.0.10
 gunicorn==19.7.1
 mysqlclient==1.3.10
