--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 dj-database-url==0.4.2
 Django==1.11
 django-bootstrap3==8.2.3
+django-ckeditor==5.2.2
 freeze==1.0.10
 gunicorn==19.7.1
 mysqlclient==1.3.10
