--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 appdirs==1.4.3
+cloudinary==1.8.0
 dj-database-url==0.4.2
 Django==1.11
 django-bootstrap3==8.2.3
 django-ckeditor==5.2.2
 freeze==1.0.10
 gunicorn==19.7.1
+mock==2.0.0
 mysqlclient==1.3.10
 olefile==0.44
 packaging==16.8
+pbr==3.0.1
 Pillow==4.1.0
 pyparsing==2.2.0
 pytz==2017.2
 six==1.10.0
+urllib3==1.21.1
 whitenoise==3.3.0
